# pst

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml.example  dist-workspace.toml
.cargo/: config.toml
.github/workflows/: release.yml  test.yml
src/: clipboard.rs  main.rs  redirect_generator.rs
src/config/: settings.rs
src/exif/: mod.rs
src/models/: mod.rs  progress.rs  upload_request.rs  upload_response.rs
src/orchestrator/: mod.rs  upload_orchestrator.rs
src/providers/: bunny.rs  ftp_provider.rs  mod.rs  paste_rs.rs  s3.rs  uguu.rs  upload_trait.rs  x0_at.rs  zerox.rs
